sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: ')' expected but ';' found.
	if (!plusPetit(i-1;i) {
                          ^AlgGnomeSort:4: error: ';' expected but ')' found.
	if (!plusPetit(i-1;i) {
                            ^